[package]
name = "test_reqwests"
version = "0.1.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3", default-features = false }
reqwest = "0.11"
zip = "0.5"
csv = "1.1"
tokio = { version = "1.9", features = ["macros", "fs", "rt-multi-thread"] }
nix = "0.22"
rand = "0.8"
futures = "0.3"
bytes = "1.0"
simple_logger = "1.11"
log = "0.4"
indicatif = "0.16"