[package]
name = "securitytxtcrawl"
version = "0.1.0"
authors = ["ambiso <ambiso@invalid>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3.22", default-features = false }
reqwest = "0.11.4"
zip = "0.5.13"
csv = "1.1.6"
tokio = { version = "1.9.0", features = ["macros", "fs", "rt-multi-thread"] }
nix = "0.22.0"
rand = "0.8.4"
futures = "0.3.16"
bytes = "1.0.1"
simple_logger = "1.11.0"
log = "0.4.14"
indicatif = "0.16.2"
